--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   ],
   "routes": [
     { "src": "/chat", "dest": "/api/chat.js" },
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
