--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
   ],
   "routes": [
     { "src": "/chat", "dest": "/api/chat.js" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "handle": "filesystem" }
   ]
 }
