--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "version": 2
+  "version": 2,
+  "builds": [
+    { "src": "api/chat.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/chat", "dest": "/api/chat.js" },
+    { "handle": "filesystem" }
+  ]
 }
