--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "api/chat.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/chat", "dest": "/api/chat.js" },
-    { "handle": "filesystem" }
+    { "handle": "filesystem" },
+    { "src": "/chat", "dest": "/api/chat.js" }
   ]
 }
