--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "echo5-node-backend-vercel",
   "version": "1.0.0",
-  "main": "api/chat.js",
+  "main": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7"
