--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/chat.js", "use": "@vercel/node" },
-    { "src": "/public/echo5-chat-hybrid.js", "use": "@vercel/node" },
-    { "src": "/public/echo5-chat-style.css", "use": "@vercel/node" }
+    { "src": "api/chat.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/public", "dest": "/public/echo5-chat-hybrid.js" },
-    { "src": "/public", "dest": "/public/echo5-chat-style.css" },
     { "src": "/chat", "dest": "/api/chat.js" }
   ]
 }
